--- a/CoffeeWebApi/CoffeeWebApi/Properties/launchSettings.json
+++ b/CoffeeWebApi/CoffeeWebApi/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7161;http://localhost:5161",
+      "applicationUrl": "http://localhost:7161;http://localhost:5161",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
